@startuml

title __STANDARD's Class Diagram__\n

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class Calculo {
            + execute()
        }
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class Concatenation {
            + execute()
        }
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class Organization {
            + execute()
        }
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class SimpleCalculator {
            - repetetion : Integer
            + SimpleCalculator()
            + SimpleCalculator()
            + dataRequest()
            + setRepetetion()
            + add()
            + add()
        }
      }
    }
  }
  

  Calculo -up-|> Process
  Concatenation -up-|> Process
  Organization -up-|> Process
  SimpleCalculator -up-|> Calculator
  SimpleCalculator o-- Process : process


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
